--- a/package.json
+++ b/package.json
@@ -6,16 +6,32 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-id-swiper": "^4.0.0",
+    "react-image-gallery": "^1.3.0",
+    "react-navigation": "^5.0.0",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slideshow-image": "^4.3.0",
+    "swiper": "^11.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": [
